kubernetes/movie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  movie
  labels:
    app:  movie
spec:
  replicas: 1 #三个实例
  selector:
    matchLabels:
      app: movie
      version: v1
  template:
    metadata:
      labels:
        app: movie
        version: v1
    spec:
      restartPolicy: Always
      containers:
      - name:  movie
        image: danding19931115/movie-micro:latest
        imagePullPolicy: IfNotPresent
        command: ["./movie"]
        resources: {}
        ports:
        - containerPort:  80
          name:  movie
